# onchain-judges-dispute-resolution

./: .dockerignore  .env.example  .env.testnet  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  package-lock.json  pyproject.toml  rofl.yaml  start-server.sh  start-worker.sh
.github/workflows/: reproducibility-rofl.yml
frontend-src/: README.md  eslint.config.js  index.html  main.js  package-lock.json  package.json
frontend-src/public/: _headers
src/: agent.py  config.py  job_store.py  main.py  models.py  oracle.py  scoring.py  signing.py  workers.py  x402_custom_middleware.py
src/llm_clients/: base.py  claude.py  gemini.py  grok.py  mock.py  openai.py  perplexity.py
static/: style.css
templates/: index.html
tests/e2e/: .env.test-mock  .env.test-payments  test-tweet-e2e.sh
tests/providers/: test_grok_client.py  test_tweet_integration.py
tests/unit/: test_llm_parsing.py  test_signing.py  test_tweet_llm_parsing.py  test_tweet_models.py  test_tweet_scoring.py
