[project]
name = "verisage"
version = "0.1.0"
description = "Verisage - Multi-LLM oracle for dispute resolution and fact verification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
]
